# centros-salud-vzla-api

./: .gitignore  build.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: deps.py  main.py  middleware.py
app/api/routes/: centros.py  insumos.py  usuarios.py
app/core/: config.py  firebase.py
app/repositories/: centros_repository.py  insumos_repository.py  usuarios_repository.py
app/schemas/: centro.py  insumo.py  usuario.py
app/services/: centros_service.py  insumos_service.py  usuarios_service.py
