[project]
name = "vercel-fastapi-starter"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
  "fastapi>=0.121.0",
  "firebase-admin>=7.0.0",
  "jinja2>=3.1.4",
  "pydantic-settings>=2.2.1",
  "uvicorn>=0.34.0",
]
[tool.vercel]
entrypoint = "backend.server:app"
[tool.vercel.scripts]
build = "python build.py"